--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.7.5"
   },
   "scripts": {
     "start": "node src/server.js",
