--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
     "multer": "^1.4.5-lts.1",
     "smb2": "^0.2.11"
   },
