--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
+    "node-zklib": "^1.3.0",
     "socket.io": "^4.7.5"
   },
   "scripts": {
