--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "node-zklib": "^1.3.0",
     "socket.io": "^4.7.5"
   },
