--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "olynex-project-management-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
