--- a/.github/workflows/node.js3.yml
+++ b/.github/workflows/node.js3.yml
@@ -1,29 +1,45 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI/CD
 
 on:
   push:
     branches: [ "main" ]
+
 jobs:
   build:
-
-    runs-on: selft-hosted
+    runs-on: self-hosted
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: |
+        cache: 'yarn'
+
+    # Install Yarn
+    - name: Install Yarn
+      run: npm install -g yarn
+
+    # Install dependencies using Yarn
+    - name: Install Dependencies
+      run: yarn install
+
+    # Build your project (if you have a build step)
+    - name: Build
+      run: yarn build
+
+    # Run tests (if you have tests)
+    - name: Run Tests
+      run: yarn test
+
+    # Example of setting environment variables
+    - name: Setup Environment
+      run: |
         touch .env
         echo "${{ secrets.PROD_ENV_FILE }}" > .env
