--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,42 +1,27 @@
-name: Node.js CI/CD
+name: CI/CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: self-hosted
 
-    strategy:
-      matrix:
-        node-version: [22.x]
-
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-    - name: Install Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
+      # Set up Node.js environment with a specific version
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '[22.x]
 
-    - name: Install Yarn
-      run: npm install -g yarn
+      - name: Run a one-line script
+        run: echo Hello, world!
 
-    - name: Check Yarn Version
-      run: yarn --version
-
-    - name: Install Dependencies
-      run: yarn install
-
-    - name: Build
-      run: yarn build
-
-    - name: Run Tests
-      run: yarn test
-
-    - name: Setup Environment
-      run: |
-        touch .env
-        echo "${{ secrets.PROD_ENV_FILE }}" > .env
+      - name: Run a multi-line script 
+        run: | 
+          touch .env
+          echo "${{ secrets.PROD_ENV_FILE }}" > .env
