--- a/.github/workflows/node.js3.yml
+++ b/.github/workflows/node.js3.yml
@@ -1,38 +1,21 @@
-name: Node.js CI/CD
+name: CI/CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: self-hosted
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
+      - name: Run a one-line script
+        run: echo Hello, world!
 
-    # Install Yarn
-    - name: Install Yarn
-      run: npm install -g yarn
-
-    # Install dependencies using Yarn
-    - name: Install Dependencies
-      run: yarn install
-
-    # Build your project (if you have a build step)
-    - name: Build
-      run: yarn build
-      run: |
-        touch .env
-        echo "${{ secrets.PROD_ENV_FILE }}" > .env
+      - name: Run a multi-line script 
+        run: | 
+          touch .env
+          echo "${{ secrets.PROD_ENV_FILE }}" > .env
