--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "node-zklib": "^1.3.0",
     "socket.io": "^4.7.5"
